# AI-ML-study__Neoversity-WOOLF

./: test.py
Home_Work/goit-pycore-hw-04/: tasks_01.py  tasks_02.py  tasks_03.py  tasks_04.py
Home_Work/goit-pycore-hw-04/data/: cats_file.txt  salary_file.txt
Python Programming/Тема 1. Вступ у Python/: class_work-1.1.py
Python Programming/Тема 2. Керуючі конструкції. Винятки/: class_work-2.1.py  class_work-2.2.py
Python Programming/Тема 2. Керуючі конструкції. Винятки/web_one_2025/: README.md  main.py  pyproject.toml
Python Programming/Тема 2. Керуючі конструкції. Винятки/web_one_2025/src/: commands.py  invoker.py  logger.py  strategies.py  tasks.py
Python Programming/Тема 3. Модулі datetime та time, math. Робота з випадковими величинами/: ClassWork-3.2.py  ClassWork-3.3.py  class_work-3.1.py  person_age.py
Python Programming/Тема 4. Регулярні вирази та розширена робота з рядками/: ClassWork-4.1.py  ClassWork-4.2.py  class_work-4.2.py  count_digits.py  spam_words.py
Python Programming/Тема 5. Робота з файлами та обробка виключень/: class_work-5.1.py  class_work-5.2.py  class_work-5.3.py  class_work-5.4.py
Python Programming/Тема 6. Робота з модулями та створення віртуального оточення/: class_work-6.1.py  class_work-6.2.py  class_work_virt-space.py
Python Programming/Тема 6. Робота з модулями та створення віртуального оточення/Experiens/: main.py  mymodule.py
Python Programming/Тема 6. Робота з модулями та створення віртуального оточення/example_joke/: main.py
(+1 files in other folders)
